--- a/index.html
+++ b/index.html
@@ -48,12 +48,60 @@
 					</div>
 					<h1 class="nav__title">Подготовка к ЕГЭ по русскому языку</h1>
 					<a href="index.html" class="nav__logo">
-						<img src="assets/img/" alt="logo">
+						<img src="assets/img/logo.PNG" alt="logo">
 					</a>
 				</nav>
 			</div>
 		</div>
 	</header>
+	<main class="main container">
+		<section class="hero">
+			<div class="hero__content">
+				<img src="https://skunb.ru/sites/default/files/field/image/641.jpg" alt="" class="hero__img">
+				<div class="hero__inner">
+					<h2 class="hero__title">Как готовиться к ЕГЭ по русскому языку?</h2>
+					<p class="hero__text">
+						Предлагаем вам короткий и эффективный путь к успеху. Мы разобрали для вас отдельно каждое задание ЕГЭ по русскому языку. В каждой статье вы найдете теоретический материал, который содержит только то, что необходимо и достаточно для выполнения заданий ЕГЭ по русскому. мы даем вам алгоритм выполнения заданий ЕГЭ. Подскажем, какие ловушки могут ожидать вас в том или ином задании. Материал, который надо учить наизусть, представлен в виде таблиц-подсказок.
+					</p>
+					<a href="test.html" class="hero__link" target="_blank">
+						<span>Пройдите тест</span>
+					</a>
+				</div>
+			</div>
+		</section>
+		<section class="contents">
+			<h2 class="contents__title">Оглавление</h2>
+			<ul class="contents__list">
+				<li class="contents__item"><a href="./exercise.html#task-1" target="_blank" class="contents__link">Задание 1. Средства связи предложений в тексте.</a></li>
+				<li class="contents__item"><a href="./exercise-1.html#task-2" target="_blank" class="contents__link">Задание 2. Значение слова.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-3" target="_blank" class="contents__link">Задание 3. Стили речи</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-4" target="_blank" class="contents__link">Задание 4. Орфоэпические нормы.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-5" target="_blank" class="contents__link">Задание 5. Паронимы.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-6" target="_blank" class="contents__link">Задание 6. Речевые нормы. Тавтология и плеоназм.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-7" target="_blank" class="contents__link">Задание 7. Морфологические нормы.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-8" target="_blank" class="contents__link">Задание 8. Синтаксические нормы.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-9" target="_blank" class="contents__link">Задание 9. Правописание гласных в корне.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-10" target="_blank" class="contents__link">Задание 10. Правописание приставок.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-11" target="_blank" class="contents__link">Задание 11. Правописание суффиксов.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-12" target="_blank" class="contents__link">Задание 12. Спряжение глаголов.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-13" target="_blank" class="contents__link">Задание 13. Правописание частицы НЕ.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-14" target="_blank" class="contents__link">Задание 14. Слитное, раздельное и дефисное написание слов.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-15" target="_blank" class="contents__link">Задание 15. Н и НН в суффиксах прилагательных и причастий.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-16" target="_blank" class="contents__link">Задание 16. Запятые при однородных членах и в сложносочинённых предложениях.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-17" target="_blank" class="contents__link">Задание 17. Запятые при причастных и деепричастных оборотах.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-18" target="_blank" class="contents__link">Задание 18. Запятые при вводных словах и обращениях.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-19" target="_blank" class="contents__link">Задание 19. Запятые в сложноподчинённом предложении.</a></li>
+				<li class="contents__item"><a href="./exercise.html#task-20" target="_blank" class="contents__link">Задание 20. Запятые в сложных предложениях.</a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+				<li class="contents__item"><a href="" class="contents__link"></a></li>
+			</ul>
+		</section>
+	</main>
 	
 </body>
 </html>
