--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 			<ul class="contents__list">
 				<li class="contents__item"><a href="./exercise.html#task-1" target="_blank" class="contents__link">Задание 1. Средства связи предложений в тексте.</a></li>
 				<li class="contents__item"><a href="./exercise-1.html#task-2" target="_blank" class="contents__link">Задание 2. Значение слова.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-3" target="_blank" class="contents__link">Задание 3. Стили речи</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-4" target="_blank" class="contents__link">Задание 4. Орфоэпические нормы.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-5" target="_blank" class="contents__link">Задание 5. Паронимы.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-6" target="_blank" class="contents__link">Задание 6. Речевые нормы. Тавтология и плеоназм.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-7" target="_blank" class="contents__link">Задание 7. Морфологические нормы.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-8" target="_blank" class="contents__link">Задание 8. Синтаксические нормы.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-9" target="_blank" class="contents__link">Задание 9. Правописание гласных в корне.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-10" target="_blank" class="contents__link">Задание 10. Правописание приставок.</a></li>
-				<li class="contents__item"><a href="./exercise.html#task-11" target="_blank" class="contents__link">Задание 11. Правописание суффиксов.</a></li>
+				<li class="contents__item"><a href="./exercise-2.html#task-3" target="_blank" class="contents__link">Задание 3. Стили речи</a></li>
+				<li class="contents__item"><a href="./exercise-3.html#task-4" target="_blank" class="contents__link">Задание 4. Орфоэпические нормы.</a></li>
+				<li class="contents__item"><a href="./exercise-4.html#task-5" target="_blank" class="contents__link">Задание 5. Паронимы.</a></li>
+				<li class="contents__item"><a href="./exercise-5.html#task-6" target="_blank" class="contents__link">Задание 6. Речевые нормы. Тавтология и плеоназм.</a></li>
+				<li class="contents__item"><a href="./exercise-6.html#task-7" target="_blank" class="contents__link">Задание 7. Морфологические нормы.</a></li>
+				<li class="contents__item"><a href="./exercise-7.html#task-8" target="_blank" class="contents__link">Задание 8. Синтаксические нормы.</a></li>
+				<li class="contents__item"><a href="./exercise-8.html#task-9" target="_blank" class="contents__link">Задание 9. Правописание гласных в корне.</a></li>
+				<li class="contents__item"><a href="./exercise-9.html#task-10" target="_blank" class="contents__link">Задание 10. Правописание приставок.</a></li>
+				<li class="contents__item"><a href="./exercise-10.html#task-11" target="_blank" class="contents__link">Задание 11. Правописание суффиксов.</a></li>
 				<li class="contents__item"><a href="./exercise.html#task-12" target="_blank" class="contents__link">Задание 12. Спряжение глаголов.</a></li>
 				<li class="contents__item"><a href="./exercise.html#task-13" target="_blank" class="contents__link">Задание 13. Правописание частицы НЕ.</a></li>
 				<li class="contents__item"><a href="./exercise.html#task-14" target="_blank" class="contents__link">Задание 14. Слитное, раздельное и дефисное написание слов.</a></li>
