--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</div> -->
 					<h1 class="nav__title">Подготовка к ЕГЭ по русскому языку</h1>
 					<a href="index.html" class="nav__logo">
-						<img src="assets/img/logo.PNG" alt="logo">
+						<img src="assets/img/logo1.png" alt="logo1">
 					</a>
 				</nav>
 			</div>
@@ -73,136 +73,136 @@
 			<h2 class="contents__title">Оглавление</h2>
 			<ul class="contents__list">
 				<li class="contents__item">
-          <a href="./exercise.html#task-1" target="_blank" class="contents__link">
+          <a href="./exercise.html#task-1"  class="contents__link">
             Задание 1. Средства связи предложений в тексте.
           </a>
           </li>
 				<li class="contents__item">
-          <a href="./exercise-1.html#task-2" target="_blank" class="contents__link">
+          <a href="./exercise-1#task-2" class="contents__link">
             Задание 2. Значение слова.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-2.html#task-3" target="_blank" class="contents__link">
+          <a href="./exercise-2.html#task-3"  class="contents__link">
             Задание 3. Стили речи
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-3.html#task-4" target="_blank" class="contents__link">
+          <a href="./exercise-3.html#task-4"  class="contents__link">
             Задание 4. Орфоэпические нормы.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-4.html#task-5" target="_blank" class="contents__link">
+          <a href="./exercise-4.html#task-5"  class="contents__link">
             Задание 5. Паронимы.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-5.html#task-6" target="_blank" class="contents__link">
+          <a href="./exercise-5.html#task-6"  class="contents__link">
             Задание 6. Речевые нормы. Тавтология и плеоназм.</a>
           </li>
 				<li class="contents__item">
-          <a href="./exercise-6.html#task-7" target="_blank" class="contents__link">
+          <a href="./exercise-6.html#task-7"  class="contents__link">
             Задание 7. Морфологические нормы.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-7.html#task-8" target="_blank" class="contents__link">
+          <a href="./exercise-7.html#task-8"  class="contents__link">
             Задание 8. Синтаксические нормы.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-8.html#task-9" target="_blank" class="contents__link">
+          <a href="./exercise-8.html#task-9"  class="contents__link">
             Задание 9. Правописание гласных в корне.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-9.html#task-10" target="_blank" class="contents__link">
+          <a href="./exercise-9.html#task-10"  class="contents__link">
             Задание 10. Правописание приставок.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-10.html#task-11" target="_blank" class="contents__link">
+          <a href="./exercise-10.html#task-11"  class="contents__link">
             Задание 11. Правописание суффиксов.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-11.html#task-12" target="_blank" class="contents__link">
+          <a href="./exercise-11.html#task-12"  class="contents__link">
             Задание 12. Спряжение глаголов.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-24.html#task-24" target="_blank" class="contents__link">
+          <a href="./exercise-24.html#task-24"  class="contents__link">
             Задание 13. Правописание частицы НЕ.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-12.html#task-14" target="_blank" class="contents__link">
+          <a href="./exercise-12.html#task-14"  class="contents__link">
             Задание 14. Слитное, раздельное и дефисное написание слов.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-13.html#task-15" target="_blank" class="contents__link">
+          <a href="./exercise-13.html#task-15"  class="contents__link">
             Задание 15. Н и НН в суффиксах прилагательных и причастий.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercis14.html#task-16" target="_blank" class="contents__link">
+          <a href="./exercis14.html#task-16"  class="contents__link">
             Задание 16. Запятые при однородных членах и в сложносочинённых предложениях.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-15.html#task-17" target="_blank" class="contents__link">
+          <a href="./exercise-15.html#task-17"  class="contents__link">
             Задание 17. Запятые при причастных и деепричастных оборотах.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-16.html#task-18" target="_blank" class="contents__link">
+          <a href="./exercise-16.html#task-18"  class="contents__link">
             Задание 18. Запятые при вводных словах и обращениях.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-17.html#task-19" target="_blank" class="contents__link">
+          <a href="./exercise-17.html#task-19"  class="contents__link">
             Задание 19. Запятые в сложноподчинённом предложении.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-18.html#task-20" target="_blank" class="contents__link">
+          <a href="./exercise-18.html#task-20"  class="contents__link">
             Задание 20. Запятые в сложных предложениях.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercis-19.html#task-21" target="_blank" class="contents__link">
+          <a href="./exercis-19.html#task-21"  class="contents__link">
             Задание 21. Знаки препинания. Запятые. Двоеточие. Тире.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-20.html#task-22" class="contents__link" target="_blank">
+          <a href="./exercise-20.html#task-22" class="contents__link" >
             Задание 22. Как понимать содержание текста.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-21.html#task-23" class="contents__link" target="_blank">
+          <a href="./exercise-21.html#task-23" class="contents__link" >
             Задание 23. Типы речи. Логика связи между предложениями.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-22.html#task-24" class="contents__link" target="_blank">
+          <a href="./exercise-22.html#task-24" class="contents__link" >
             Задание 24. Лексические средства выразительности.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-23.html#task-25" class="contents__link" target="_blank">
+          <a href="./exercise-23.html#task-25" class="contents__link" >
             Задание 25. Способы связи между предложениями.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-25.html#task-26" class="contents__link" target="_blank">
+          <a href="./exercise-25.html#task-26" class="contents__link">
             Задание 26. Языковые средства выразительности.
           </a>
         </li>
 				<li class="contents__item">
-          <a href="./exercise-26.html#task-27" class="contents__link" target="_blank">
+          <a href="./exercise-26.html#task-27" class="contents__link" >
             Задание 27. Сочинение.
           </a>
         </li>
