--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Школьный проект</title>
 	<link rel="stylesheet" href="assets/css/normilize.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/media.css">
 	<script src="assets/js/app.js" defer></script>
 </head>
 <body>
